# datashark-processors-template

./: README.md  pyproject.toml  setup.cfg
datashark_processors_template/: __init__.py  template.py
ds_p_template/: __init__.py  plugin.py
